--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="/">Home</a> |
         <a href="/about">About</a> |
-        <a href="/posts">News</a> 
+        <a href="{% url 'posts:list' %}">News</a> 
     </nav>
     <main>
         {% block content %}{% endblock %}
