--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
     min-height: 100vh;
     /* display: grid;
     place-content: center; */
-    font-size: 3rem;
+    /* font-size: 3rem; */
     background-color: black;
     color: whitesmoke;
 }
@@ -27,6 +27,10 @@ main {
     flex-grow: 1;
     display: grid;
     place-content: center;
+}
+
+h1, h2 {
+    font-size: 2.5rem;
 }
 
 h1, p {
