--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -7,4 +7,9 @@
 
 {% block content %}
 <h1>Register a User</h1>
+<form class="form-width-validation" action="/users/register/" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <button class="form-submit">Submit</button>
+</form>
 {% endblock  %}
