added login page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,8 +16,9 @@
     <nav>
         <a href="/">Home</a> |
         <a href="/about">About</a> |
-        <a href="{% url 'posts:list' %}">News</a> |``
-        <a href="{% url 'users:register' %}">Rocket</a>
+        <a href="{% url 'posts:list' %}">News</a> |
+        <a href="{% url 'users:register' %}">Register</a> | 
+        <a href="{% url 'users:login' %}">Login</a>
     </nav>
     <main>
         {% block content %}{% endblock %}
