--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,8 +17,18 @@
         <a href="/">Home</a> |
         <a href="/about">About</a> |
         <a href="{% url 'posts:list' %}">News</a> |
+        
+        {% if user.is_authenticated %}
+            <a href="{% url 'posts:new-post' %}">New Post</a> |
+
+            <form class="logout" action="{% url 'users:logout' %}" method="post">
+                {% csrf_token %}
+                <button class="logout-button" aria-label="this is a user logout" title="user logout">Logout</button>
+            </form>
+        {% else %}
         <a href="{% url 'users:register' %}">Register</a> | 
-        <a href="{% url 'users:login' %}">Login</a>
+        <a href="{% url 'users:login' %}">Login</a> |
+        {% endif %}
     </nav>
     <main>
         {% block content %}{% endblock %}
